# yeni

./: .gitignore  .pre-commit-config.yaml  .replit  AGENT_API_DOCS.md  ALIAS_TEST_REHBERI.md  BARKOD_ALIAS_KULLANIM.md  CENTRAL_STOCK_KOLONLAR.md  CENTRAL_STOCK_PUSHER_README.md  CLAUDE.md  DEPLOY_NOTES.md  Dockerfile  GELISTIRME_ONERILERI.md  GORSEL_IYILESTIRMELER.md  KULLANICI_HAREKETLERI_GELISTIRMELER.md  KURULUM_OZET.md  OPENWEATHERMAP_SETUP.md  OPEN_METEO_FREE.md  QUICK_START.md  RAF_ENTEGRASYONU.md  STOK_SISTEMI_DOKUMAN.md  UYGULANAN_IYILESTIRMELER.md  WEATHER_ANIMATIONS_README.md  WEATHER_UPDATE_README.md  YENI_SIPARIS_GELISTIRMELER.md  add_source_column.py  agent_api.py  ai_brain.py  ai_stock_prediction.py  akilli_motor.py  akilli_motor_moduller.py  analysis.py  api_routes.py  app.py  archive.py  auto_push.sh  barcode_alias_helper.py  barcode_alias_routes.py  barcode_print_service.py  barcode_utils.py  cache_config.py  (+122 more)
.claude/: settings.json  settings.local.json
.config/: test_server.py
ai_asistan/: .mcp.json  IS_KURALLARI.md  KURULUM.md  asistan_ayar.py  blueprint.py  create_readonly_role.sql  motor_ayar.py  sql_kopru.py
amazon/: __init__.py  amazon_config.py  amazon_routes.py  amazon_service.py  image_cache.json  products_cache.json  sku_barcode_matches.json
attached_assets/: Pasted--1-200-INFO-werkzeug-172-31-128-55-17-Feb-2025-17-39-38-GET-static-logo-gullu-png-HTTP-1--1739814000716.txt  Pasted--17-37-30-GET-static-images-default-jpg-HTTP-1-1-200-INFO-werkzeug-172-31-128-55-17-Feb-2-1739813900817.txt  Pasted-033525-jpg-HTTP-1-1-304-User-role-in-session-admin-Required-roles-admin-manager-2025--1742769742784.txt  (+31 more)
(+2887 files in other folders)
