[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
apscheduler = "^3.10.4"
order = "^2.1.7"
barcode = "^1.0.4"
psycopg2-binary = "^2.9.9"
itsdangerous = "^2.2.0"
pyotp = "^2.9.0"
qrcode = "^8.0"
werkzeug = "^3.0.4"
python-dateutil = "^2.9.0.post0"
flask-socketio = "^5.4.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
flask-wtf = "^1.2.2"
flask-caching = "^2.3.0"
wtforms = "^3.2.1"
aiohttp = "^3.11.2"
flask-script = "^2.0.6"
flask-migrate = "^4.0.7"
celery = "^5.4.0"
requests-futures = "^1.0.2"
jinja2 = "^3.1.4"
urllib3 = "^2.2.3"
pyopenssl = "^24.3.0"
redis = "^5.2.1"
flask-limiter = "^3.10.0"
aioredis = "^2.0.1"
jsonify = "^0.5"
numpy = "^2.2.2"
mlxtend = "^0.23.4"
prophet = "^1.1.6"
statsmodels = "^0.14.4"
plotly = "^6.0.0"
analysis = "^0.1.7"
extensions = "^0.4"
openai = "^1.65.4"
flask-cors = "^5.0.1"
flask-login = "^0.6.3"
fpdf = "^1.7.2"
decorators = "^2.0.7"
reportlab = "^4.4.0"
weasyprint = "^65.1"
Pillow = ">=10.0.0"
holidays = "<1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
